# wsf-bot

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  entrypoint.sh  example.config.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
client/: client.py  types.py
config/: config.py  types.py
notifications/: discord.py  types.py
